implement group formation page

--- a/app/frontend/src/pages/dashboards/professor.html
+++ b/app/frontend/src/pages/dashboards/professor.html
@@ -17,6 +17,9 @@
                 <a href="/evaluation_rubric/evaluation_rubric.html" class="nav-btn eval-btn">
                     Evaluation Rubric
                 </a>
+                <a href="/group_formation/group_formation.html" class="nav-btn eval-btn">
+                    Group Formation
+                </a>
                 <div class="profile">
                     <a href="/profile_page/profile.html" class="profile-link">
                         <div class="profile-dropdown-container" style="position:relative;">
