--- a/app/frontend/src/pages/work_journal/work_journal.html
+++ b/app/frontend/src/pages/work_journal/work_journal.html
@@ -13,7 +13,7 @@
       <div class="brand">Conductor <span>App</span></div>
 
       <div class="nav-actions" style="display:flex;align-items:center;gap:1.2rem;">
-          <a href="#" id="backDashboard" class="back-btn">← Back to Dashboard</a>
+          <a href="#" id="backDashboard" class="nav-btn eval-btn rubric-btn">← Back to Dashboard</a>
 
           <div class="profile">
               <a href="/profile_page/profile.html" class="profile-link">
