--- a/app/frontend/src/pages/dashboards/team_lead.html
+++ b/app/frontend/src/pages/dashboards/team_lead.html
@@ -11,6 +11,9 @@
         <header class="top-nav">
             <div class="brand">Conductor <span>App</span></div>
             <div class="nav-actions">
+                <a href="/group_formation/group_member_form.html?role=team_lead" class="nav-btn eval-btn">
+                    Group Formation Form 
+                </a>
                 <div class="profile">
                     <div class="profile-dropdown-container" style="position:relative;">
                         <img id="dashboardProfileImg" src="/assets/logo/user.png" alt="Profile" style="width:32px;height:32px;border-radius:50%;object-fit:cover;cursor:pointer;" />
