--- a/app/frontend/src/pages/profile_page/profile.html
+++ b/app/frontend/src/pages/profile_page/profile.html
@@ -10,7 +10,7 @@
   <header class="top-nav">
     <div class="brand">Conductor <span>App</span></div>
     <div class="nav-actions">
-  <button id="backDashboard" class="nav-btn eval-btn">← Back to Dashboard</button>
+      <a href="#" id="backDashboard" class="nav-btn eval-btn">← Back to Dashboard</a>
 
     </div>
   </header>
